--- a/src/components/modal-window/modal-window.scss
+++ b/src/components/modal-window/modal-window.scss
@@ -7,6 +7,7 @@
   align-items: center;
   min-width: 100vw;
   min-height: 100vh;
+  border: none;
   background-color: transparent;
   z-index: 10;
 }
@@ -20,7 +21,7 @@
   width: 100%;
   max-width: 500px;
   max-height: 70vh;
-  padding: 20px;
+  padding: 35px 20px 20px;
   border-radius: 10px;
   background-color: var(--body);
   z-index: 11;
@@ -31,6 +32,7 @@
   top: 0;
   left: 0;
   background-color: #00000060;
+  border: none;
   width: 100%;
   height: 100%;
 }
